Thu Sep 18 08:45:05 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (rcs-7): Fix stupid ${TESTDIR} omission.

Wed Sep 17 16:27:41 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (rcs): New tests rcs-5 through rcs-13 test for
	getdate.y fix (rcs-12 and rcs-13 both failed with the buggy
	getdate.y).

Tue Sep 16 00:07:17 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (editor): Clean up first-dir at end of test.

	* sanity.sh (editor): New tests test do_editor.

	* commit.c (commit): For the client, if we got the log message
	from do_editor and there was an error, don't toss the message.

Mon Sep 15 14:27:54 1997  martin.sjoelin@ubs.com
	and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_checkout): fwrite in bite-size pieces, not the whole
	file in one fwrite.

Sun Sep 14 12:23:15 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* commit.c (check_fileproc): If the file has "conflict
	indicators", spit a warning and proceed with the checkin.
	* sanity.sh (conflicts): Adjust tests conflicts-132,
	conflicts-status-3, conflicts-133, and conflicts-status-4
	for new behavior.

Fri Sep 12 11:12:34 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* add.c, admin.c, checkin.c, checkout.c, classify.c, commit.c,
	create_adm.c, cvsrc.c, diff.c, entries.c, find_names.c, hash.c,
	import.c, lock.c, log.c, logmsg.c, main.c, modules.c, myndbm.c,
	no_diff.c, parseinfo.c, patch.c, rcs.c, rcscmds.c, recurse.c,
	remove.c, repos.c, root.c, rtag.c, status.c, subr.c, tag.c,
	update.c, vers_ts.c, hash.h, rcs.h, options.h.in: Change "CVS 1.4
	kit" to "CVS source distribution".

	* sanity.sh: Comment out call to "whoami".

Thu Sep 11 10:09:04 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* commit.c (classify_file_internal): Add comment about saving
	quiet vs. saving really_quiet.

	* sanity.sh (newb-123j0): Use two regexps instead of assuming that
	expr has "\(", "\|", and "\)".  If we want to require the latter,