@@ -1,3 +1,10 @@
+Fri Sep 19 15:08:08 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* log.c (log_version): If p->data is NULL, it is an empty log
+	message.
+	* sanity.sh (rcs-14): New test, tests for above fix (previously
+	this was a coredump).
+
 Thu Sep 18 08:45:05 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* sanity.sh (rcs-7): Fix stupid ${TESTDIR} omission.
